<resources>
    <string name="app_name">Chess Clock</string>
    <string name="upper_clock" translatable="false">05:00</string>
    <string name="lower_clock" translatable="false">05:00</string>
    <string name="set_your_time">Set your time</string>
    <string name="newTimerTextOne" translatable="false">05:00</string>
    <string name="newTimerTextTwo" translatable="false">05:00</string>
    <string name="newTimerButtonOne">+</string>
    <string name="newTimerButtonTwo">-</string>
    <string name="configuration_button">Configuration</string>
    <string name="toast_text">Configure your clock!</string>
    <string name="plus_clocktwo">+</string>
    <string name="minus_clocktwo">-</string>
    <string name="upper_clock_button">upper clock</string>
    <string name="lower_clock_button">lower clock</string>
</resources>